--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,20 +42,6 @@
   box-shadow: 0 0 0 0.25rem rgba(87, 16, 178, 0.25);
 }
 
-.filter-search__filter-btn {
-  padding: 0.375rem 3rem;
-  font-size: 1rem;
-  position: relative;
-}
-.filter-search__filter-btn i {
-  position: absolute;
-  right: 7.6rem;
-  top: 0.6rem;
-}
-.filter-search__filter-btn span {
-  padding-left: 1rem;
-}
-
 .navbar i {
   margin-right: 0.5rem;
 }
@@ -404,6 +390,18 @@
 }
 .event-detail .return-to-events:hover {
   color: #5710b2;
+}
+
+.filter-search__filter-btn {
+  padding: 0.375rem 1rem;
+  font-size: 1rem;
+  position: relative;
+}
+.filter-search__filter-btn span {
+  padding-left: 1rem;
+}
+.filter-search .dropdown-toggle::after {
+  margin-left: 1rem;
 }
 
 .checkout {
