Refactor style event detail and preview event page

--- a/events/templates/events/event-detail.html
+++ b/events/templates/events/event-detail.html
@@ -8,7 +8,7 @@
 {% block content %}
 <section class="container event-detail">
     <div class="row">
-        <div class="bg-light shadow-sm card event-detail__wrapper">
+        <div class="bg-light-gray shadow-sm card event-detail__wrapper">
             <!-- Event description -->
             <div class="col-12 text-muted my-4">
                 {{ event.description }}
