--- a/profiles/templates/includes/profile-posts.html
+++ b/profiles/templates/includes/profile-posts.html
@@ -21,7 +21,7 @@
             {% if event.is_paid %}
         <div class="col">
             <div class="card shadow-sm h-100">
-                <div class="card-body">
+                <div class="card-body bg-light-gray">
                     <!-- Event title -->
                     <h5 class="card-title card-content__title my-3 fw-bolder">{{ event.title }}</h5>
 
