--- a/templates/nav.html
+++ b/templates/nav.html
@@ -17,7 +17,7 @@
                             {% endif %}
                                 <li><a href="{% url 'profile' %}" class="text-black">My Profile</a></li>
                                 <li><a href="{% url 'events' %}" class="text-black">Local Events</a></li>
-                                <li><a href="{% url 'faq' %}" class="text-black">FAQ</a></li>
+                                <li><a href="" class="text-black">FAQ</a></li>
                                 <li><a href="{% url 'account_logout' %}" class="text-black">Log Out</a></li>
                         {% else %}
                             <li><a href="{% url 'account_login' %}" class="text-black">Log In</a></li>
