--- a/templates/nav.html
+++ b/templates/nav.html
@@ -19,11 +19,13 @@
                                 <li><a href="{% url 'events' %}" class="text-black">Local Events</a></li>
                                 <li><a href="" class="text-black">FAQ</a></li>
                                 <li><a href="{% url 'account_logout' %}" class="text-black">Log Out</a></li>
+                                <li><a href="{% url 'contact' %}" class="text-black">Contact</a></li>
                         {% else %}
                             <li><a href="{% url 'account_login' %}" class="text-black">Log In</a></li>
                             <li><a href="{% url 'account_signup' %}" class="text-black">Sign up</a></li>
                             <li><a href="{% url 'events' %}" class="text-black">Local Events</a></li>
                             <li><a href="" class="text-black">FAQ</a></li>
+                            <li><a href="{% url 'contact' %}" class="text-black">Contact</a></li>
                         {% endif %}
                     </ul>
                 </div>
