--- a/events/templates/events/event-detail.html
+++ b/events/templates/events/event-detail.html
@@ -68,17 +68,15 @@
             </div>
 
             <div class="event-detail__buttons my-2">
-                {% if request.user.is_authenticated %}
-                {% if event.user != user_db %}
-                <div class="d-flex justify-content-center align-items-center my-4">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary"><a
-                                href="{% url 'edit_event' event.id %}">Edit this event</a></button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary"><a
-                                href="{% url 'delete_event' event.id %}">Delete this event</a></button>
+                {% if request.user.is_superuser %}
+                    <div class="d-flex justify-content-center align-items-center my-4">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-sm btn-outline-secondary"><a
+                                    href="{% url 'edit_event' event.id %}">Edit this event</a></button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"><a
+                                    href="{% url 'delete_event' event.id %}">Delete this event</a></button>
+                        </div>
                     </div>
-                </div>
-                {% endif %}
                 {% endif %}
             </div>
         </div>
