Add contact table to admin panel and CSS

--- a/event_admin/templates/event_admin/event-admin.html
+++ b/event_admin/templates/event_admin/event-admin.html
@@ -8,11 +8,16 @@
 {% block content %}
 
 <section class="container event-mgmt">
-    <h4>Contact requests</h4>
-    {% include 'includes/contact-requests.html' %}
+    <div class="my-5">
+        <h4>Contact requests</h4>
+        {% include 'includes/contact-requests.html' %}
+    </div>
 
-    <h4>Event Management</h4>
-    {% include 'includes/events-mgmt.html' %}
+    <div class="my-5">
+        <h4>Event Management</h4>
+        {% include 'includes/events-mgmt.html' %}
+    </div>
+
 </section>
 
 {% endblock %}
