Add functionality to mark contact request as resolved

--- a/event_admin/templates/event_admin/event-admin.html
+++ b/event_admin/templates/event_admin/event-admin.html
@@ -9,12 +9,14 @@
 
 <section class="container event-mgmt">
     <div class="my-5">
-        <h4>Contact requests</h4>
+        <h4 class="mb-3">Contact requests</h4>
         {% include 'includes/contact-requests.html' %}
     </div>
 
+    <hr>
+
     <div class="my-5">
-        <h4>Event Management</h4>
+        <h4 class="mb-3">Event Management</h4>
         {% include 'includes/events-mgmt.html' %}
     </div>
 
