Create FAQ page

--- a/static/css/_index.scss
+++ b/static/css/_index.scss
@@ -39,7 +39,8 @@
 
 //Faq
 .accordion-button:not(.collapsed) {
-  color: $prim-colour;
+  color: #fff;
+  background-color: $sec-colour;
 }
 
 .accordion-button:focus {
