--- a/templates/footer.html
+++ b/templates/footer.html
@@ -7,7 +7,7 @@
         </div>
         <ul class="menu fw-bold order-1">
             <li class="menu-item"><a href="{% url 'events' %}" class="menu-link ps-0 pe-3 text-gray-custom">Local Events</a></li>
-            <li class="menu-item"><a href="#" class="menu-link ps-0 pe-3 text-gray-custom">FAQ</a></li>
+            <li class="menu-item"><a href="{% url 'faq' %}" class="menu-link ps-0 pe-3 text-gray-custom">FAQ</a></li>
             <li class="menu-item"><a href="{% url 'contact' %}" class="menu-link ps-0 text-gray-custom">Contact</a></li>
         </ul>
     </div>
