--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,34 @@
   box-shadow: 0 0 0 0.25rem rgba(87, 16, 178, 0.25);
 }
 
+.subheading h2 {
+  color: #5710b2;
+}
+.subheading a i {
+  font-size: 0.9rem;
+}
+.subheading__image {
+  background: url("/media/homepage-img.png") no-repeat center center;
+  background-size: contain;
+  min-height: 20rem;
+}
+
+.content-cards a {
+  text-decoration: none;
+}
+.content-cards .card-1 {
+  background-color: rgba(32, 212, 137, 0.9);
+  color: #5710b2;
+}
+.content-cards .card-2 {
+  background-color: rgba(32, 212, 137, 0.7);
+  color: #5710b2;
+}
+.content-cards .card-3 {
+  background-color: rgba(32, 212, 137, 0.5);
+  color: #5710b2;
+}
+
 .navbar i {
   margin-right: 0.5rem;
 }
