--- a/static/css/_profile.scss
+++ b/static/css/_profile.scss
@@ -34,6 +34,11 @@
   }
 }
 
+.disabled {
+  pointer-events: none;
+  background-color: rgba($sec-colour, 0.6) !important;
+}
+
 //Settings
 .account-settings {
   a {
