Fix enable button update profile when change is detected & CSS fix for img

--- a/static/css/_profile.scss
+++ b/static/css/_profile.scss
@@ -29,6 +29,13 @@
       display: inline-block;
       margin: 2%;
       box-sizing: border-box;
+
+      @include bp(tablet) {
+        min-width: 12rem;
+      }
+      @include bp(desktop) {
+        min-width: 15rem;
+      }
     }
 
   }
