--- a/events/templates/events/events.html
+++ b/events/templates/events/events.html
@@ -14,7 +14,7 @@
                 <div class="d-flex justify-content-center align-items-center pt-3">
                     <div class="btn btn-sm btn-secondary filter-search__filter-btn dropdown-toggle" id="dropdownFilter"
                          data-bs-toggle="dropdown" aria-expanded="false">
-                        <span>Filter</span>
+                            <span id="filter-value-js">Filter</span>
                     </div>
                     <ul class="dropdown-menu" aria-labelledby="dropdownFilter">
                         <li><a class="dropdown-item fw-bolder" href="{% url 'events' %}">View All</a></li>
@@ -164,6 +164,9 @@
         </div>
     </div>
 </section>
+{% endblock %}
 
-
+{% block postload_js %}
+{{ block.super }}
+<script src="{% static 'events/js/filterName.js' %}"></script>
 {% endblock %}
