--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <!-- Nav -->
-    <div class="collapse bg-light" id="navbarHeader">
+    <div class="collapse bg-light-gray" id="navbarHeader">
         <div class="container">
             <div class="row">
                 <div class="col-sm-8 col-md-7 py-4">
@@ -32,7 +32,7 @@
             </div>
         </div>
     </div>
-    <div class="navbar navbar-light bg-light shadow-sm">
+    <div class="navbar navbar-light bg-light-gray shadow-sm">
         <div class="container">
             <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center">
                 <i class="fas fa-map-marked-alt"></i><strong>Our Neighbourhood</strong>
