--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Our Neighbourhood" />
+
     {% endblock %}
 
     {% block extra_meta %}
@@ -17,6 +19,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon.ico' %}">
+
     {% endblock %}
 
     {% block extra_css %}
@@ -56,9 +61,10 @@
     {% endblock %}
 
     <!-- Main content -->
-    <main>
+    <main id="page-container">
         {% block content %}
         {% endblock %}
+
     </main>
 
     <!-- Footer -->
