Set page min height to 100vh

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -527,6 +527,16 @@ footer {
   font-family: "Poppins", sans-serif;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+
 .page-header-bg {
   width: 100vw;
   margin-bottom: 3rem;
