Small layout adjustments and add wireframes to readme

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link fw-bolder" id="profile-tab" data-bs-toggle="tab" data-bs-target="#posts" type="button"
-                    role="tab" aria-controls="posts" aria-selected="false">Posts
+                    role="tab" aria-controls="posts" aria-selected="false">My Events
             </button>
         </li>
         <li class="nav-item" role="presentation">
