--- a/static/css/_card.scss
+++ b/static/css/_card.scss
@@ -19,15 +19,20 @@
   }
 
   &__key {
-    width: 30%;
-    margin-right: 1.2rem;
+    width: 40%;
+    margin-right: 0;
     padding-top: 0.2rem;
     vertical-align: top;
     font-size: 0.9rem;
+
+    @include bp(desktop) {
+      width: 30%;
+      margin-right: 1.2rem;
+    }
   }
 
   &__value {
     position: relative;
-    width: 60%;
+    width: 57%;
   }
 }
