--- a/static/css/_variables.scss
+++ b/static/css/_variables.scss
@@ -1,7 +1,6 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700|Lora:100,200,300,400,500,600,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700&display=swap");
 
 //Fonts
-$title: "Lora", serif;
 $paragraph: "Poppins", sans-serif;
 
 //Font sizes
