--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700|Lora:100,200,300,400,500,600,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700&display=swap");
 .hero {
   background-color: #5710b2;
   position: relative;
@@ -398,15 +398,21 @@
   margin: 0;
 }
 .card-content__key {
-  width: 30%;
-  margin-right: 1.2rem;
+  width: 40%;
+  margin-right: 0;
   padding-top: 0.2rem;
   vertical-align: top;
   font-size: 0.9rem;
 }
+@media (min-width: 64rem) {
+  .card-content__key {
+    width: 30%;
+    margin-right: 1.2rem;
+  }
+}
 .card-content__value {
   position: relative;
-  width: 60%;
+  width: 57%;
 }
 
 .event-detail {
