--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-lg-column bg-light-gray py-3 mt-5">
-    <div class="container d-flex flex-md-row align-items-center justify-content-between">
+    <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between">
         <div class="order-2 order-md-1" id="footer-brand">
             <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center">
                 <i class="fas fa-map-marked-alt me-1"></i><strong>Our Neighbourhood</strong>
