--- a/static/css/_profile.scss
+++ b/static/css/_profile.scss
@@ -1,6 +1,6 @@
 //Profile - main page
 .my-profile {
-  border: 1px solid rgba(0,0,0,.125); /* .card border */
+  border: 1px solid rgba(0, 0, 0, .125); /* .card border */
   border-radius: .25rem; /* .card border-radius */
   max-width: 70vw;
 
@@ -37,7 +37,38 @@
         min-width: 15rem;
       }
     }
+  }
 
+  &__tab {
+    margin: 0 auto;
+
+    @include bp(tablet) {
+      margin: 0;
+    }
+  }
+
+  &__divider {
+    display: block;
+
+    @include bp(tablet) {
+      display: none;
+    }
+  }
+}
+
+.nav-tabs {
+  border-bottom: 0;
+
+  @include bp(tablet) {
+    border-bottom: 1px solid #dee2e6;
+  }
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  border-color: #dee2e6 #dee2e6 #dee2e6;
+
+  @include bp(tablet) {
+    border-color: #dee2e6 #dee2e6 #fff;
   }
 }
 
@@ -115,6 +146,7 @@
   &__btn-container {
     @include flexbox(flex, center, center);
   }
+
   &__img {
     background: url('/media/add-event.png') no-repeat center center;
     background-size: contain;
