--- a/static/css/style.css
+++ b/static/css/style.css
@@ -264,6 +264,40 @@
     min-width: 15rem;
   }
 }
+.my-profile__tab {
+  margin: 0 auto;
+}
+@media (min-width: 48rem) {
+  .my-profile__tab {
+    margin: 0;
+  }
+}
+.my-profile__divider {
+  display: block;
+}
+@media (min-width: 48rem) {
+  .my-profile__divider {
+    display: none;
+  }
+}
+
+.nav-tabs {
+  border-bottom: 0;
+}
+@media (min-width: 48rem) {
+  .nav-tabs {
+    border-bottom: 1px solid #dee2e6;
+  }
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+  border-color: #dee2e6 #dee2e6 #dee2e6;
+}
+@media (min-width: 48rem) {
+  .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    border-color: #dee2e6 #dee2e6 #fff;
+  }
+}
 
 .disabled {
   pointer-events: none;
